Fixed fragrance page text position and review cards spacings

--- a/app/client/src/components/Fragrance.module.css
+++ b/app/client/src/components/Fragrance.module.css
@@ -16,6 +16,14 @@
     margin-top: 10%;
 }
 
+.right-text {
+    margin-left: -10%;
+}
+
+.button-div{
+    margin-left: -13%;
+}
+
 .review-div {
     margin-top: 13%;
     margin-left: -7%;
