--- a/app/client/src/components/Reviews.module.css
+++ b/app/client/src/components/Reviews.module.css
@@ -34,7 +34,7 @@ body {
   display: flex;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 2rem;
-  margin: 1.5rem 5vw;
+  margin: 1.5rem 1.75vw;
   padding: 0;
   list-style-type: none;
 }
